fix: total number of pages